@@ -52,6 +52,8 @@ EPrints Modules
     <epp:phrase id="lib/eprint:eprint_gone"><p>You seem to be attempting to access an item that has been removed from the repository.</p></epp:phrase>
     <epp:phrase id="lib/eprint:later_version"><p>There is a later version of the item you are trying to access:<br/><epc:pin name="citation"/></p></epp:phrase>
     <epp:phrase id="lib/eprint:curr_disp"><strong>[Currently Displayed]</strong></epp:phrase>
+    <epp:phrase id="lib/eprint:not_locked">Not currently locked.</epp:phrase>
+    <epp:phrase id="lib/eprint:locked">Locked by <epc:pin name='locked_by' /> until <epc:pin name='locked_until' /></epp:phrase>
 
 <!-- History -->
 
@@ -1086,6 +1088,11 @@ Titles and Help for the System Fields
     <epp:phrase id="eprint_fieldopt_item_issues_status_reported">Reported</epp:phrase>
     <epp:phrase id="eprint_fieldopt_item_issues_status_resolved">Resolved</epp:phrase>
 
+    <epp:phrase id="eprint_fieldname_edit_lock">Lock</epp:phrase>
+    <epp:phrase id="eprint_fieldname_edit_lock_user">Locked by</epp:phrase>
+    <epp:phrase id="eprint_fieldname_edit_lock_since">Locked since</epp:phrase>
+    <epp:phrase id="eprint_fieldname_edit_lock_until">Locked until</epp:phrase>
+
     <epp:phrase id="eprint_fieldname_item_issues_count">Number of issues</epp:phrase>
 
     <epp:phrase id="eprint_fieldname__fulltext_">Full Text</epp:phrase>
@@ -1201,7 +1208,8 @@ Titles and Help for the System Fields
     <epp:phrase id="Plugin/Screen:message_message">Message</epp:phrase>
     <epp:phrase id="Plugin/Screen:message_error">Error</epp:phrase>
     <epp:phrase id="Plugin/Screen:message_warning">Warning</epp:phrase>
-	<epp:phrase id="Plugin/Screen:no_render_subclass">Error. $screen->render should be sub-classed for <epc:pin name="screen"/>.</epp:phrase>
+    <epp:phrase id="Plugin/Screen:no_render_subclass">Error. $screen->render should be sub-classed for <epc:pin name="screen"/>.</epp:phrase>
+    <epp:phrase id="Plugin/Screen:item_locked">This item is temporarily locked. Please go back and try again in a few minutes.</epp:phrase>
    
     <epp:phrase id="Plugin/Screen/Items:title">Manage deposits</epp:phrase>
     <epp:phrase id="Plugin/Screen/Items:remove_column_confirm">Really remove this column from the display?</epp:phrase>
@@ -1299,6 +1307,26 @@ Titles and Help for the System Fields
 	
 	<epp:phrase id="Plugin/Screen/EPrint:deposit">Deposit</epp:phrase>
     	<epp:phrase id="Plugin/Screen/EPrint:owner_denied">Although you are the owner of this item you may not view this screen: <epc:pin name="screen"/>. This may be because you have deposited the item and you may no longer make changes to it.</epp:phrase>
+
+    <epp:phrase id="Plugin/Screen/EPrint:locked_to_you"><div class='ep_toolbox'><div class='ep_toolbox_content' style='padding:4px'>This item is temporarily locked to allow your modifications only.</div></div></epp:phrase>
+    <epp:phrase id="Plugin/Screen/EPrint:locked_to_other"><div class='ep_msg_warning'><div class='ep_msg_warning_content' style='padding:4px'>This item is temporarily locked to allow modifications by <epc:pin name='name' /> only.</div></div></epp:phrase>
+
+    <epp:phrase id="Plugin/Screen/EPrint/TakeLock:action:take:title">Take Edit Lock</epp:phrase>
+    <epp:phrase id="Plugin/Screen/EPrint/TakeLock:action:take:description">Take the edit lock from the user currently editing this record.</epp:phrase>
+    <epp:phrase id="Plugin/Screen/EPrint/TakeLock:lock_taken">Sorry, but your edit lock on <epc:pin name='item' /> has been overridden by an editor. Try editing this record again later.</epp:phrase>
+    <epp:phrase id="Plugin/Screen/EPrint/TakeLock:item_taken">You have taken over the edit lock for this item.</epp:phrase>
+
+    <epp:phrase id="Plugin/Screen/EPrint/ReleaseLock:action:release:title">Release Edit Lock</epp:phrase>
+    <epp:phrase id="Plugin/Screen/EPrint/ReleaseLock:action:release:description">Release your lock on this item.</epp:phrase>
+    <epp:phrase id="Plugin/Screen/EPrint/ReleaseLock:item_released">You have released your lock on this item.</epp:phrase>
+
+    <epp:phrase id="Plugin/Screen/EPrint/ShowLock:title">Item Locked</epp:phrase>
+    <epp:phrase id="Plugin/Screen/EPrint/ShowLock:item_locked">
+      <p>This item is currently being modified by another user, and will remain locked for a few minutes after they stop editing, unless they choose to release it sooner.</p>
+      <p>This item has been locked since <epc:pin name='locked_since' />.</p>
+      <p>This item will be locked until at least <epc:pin name='locked_until' /> (<epc:pin name='locked_remaining' /> seconds)</p>
+      <p>Locked by: <epc:pin name='locked_by' /></p>
+    </epp:phrase>
 
 	<epp:phrase id="Plugin/Screen/FirstTool:no_tools">Sorry, you are not able to use any tools</epp:phrase>
 
