@@ -30,9 +30,18 @@ sub new
 	return $self;
 }
 
+sub obtain_lock
+{
+	my( $self ) = @_;
+
+	return $self->obtain_eprint_lock;
+}
+
 sub can_be_viewed
 {
 	my( $self ) = @_;
+
+	return 0 unless $self->could_obtain_eprint_lock;
 
 	return $self->allow( "eprint/edit" );
 }
