@@ -31,12 +31,20 @@ sub new
 	return $self;
 }
 
+sub obtain_lock
+{
+	my( $self ) = @_;
+
+	return $self->obtain_eprint_lock;
+}
+
 
 sub can_be_viewed
 {
 	my( $self ) = @_;
 
 	return 0 unless defined $self->{processor}->{eprint};
+	return 0 unless $self->could_obtain_eprint_lock;
 	return 0 if( $self->{processor}->{eprint}->get_value( "eprint_status" ) eq "inbox" );
 	return 0 if( !defined $self->{processor}->{eprint}->get_user );
 
